--- a/apps/main/.eslintrc.json
+++ b/apps/main/.eslintrc.json
@@ -9,7 +9,7 @@
           "error",
           {
             "type": "attribute",
-            "prefix": "angularFontAwesome",
+            "prefix": "df",
             "style": "camelCase"
           }
         ],
@@ -17,7 +17,7 @@
           "error",
           {
             "type": "element",
-            "prefix": "angular-font-awesome",
+            "prefix": "df",
             "style": "kebab-case"
           }
         ]
